<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">PhoneArray</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="recording_name">enter a recording name</string>
    <string name="start">start</string>
    <string name="stop">stop</string>
    <string name="play">play </string>
    <string name="welcome">Welcome to Phone Array </string>
    <string name ="add_recordings_text">Add Recordings</string>
    <string name ="settings_text"> Settings</string>
    <string name="manage_recordings_text"> Manage Recordings</string>
    <string name="home">home</string>
    <string name="available_mics">available microphones: </string>
    <string name="front_mic"> front mic</string>
    <string name="rear_mic"> rear mic</string>
    <string name="permission_denied">The needed permissions have been denied. </string>
    <string name="permission_message">In order to continue to the app, please allow all permissions.</string>
    <string name="continue_to_app">continue to the app</string>
    <string name="permission_request_title">Permission Request</string>
    <string name="permission_request_msg">This applications needs permission to record audio. Do you want to change the permission and retry? </string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="permission_denied_title"> Permission Denied </string>
    <string name="permission_denied_msg">This permission has been denied. In order to continue to the application, please accept permissions.</string>
    <string name="ok"> OK </string>
    <string name="name"> name </string>
    <string name="test">test</string>
    <string name="delete">delete</string>
    <string name="share">share</string>
    <string name="selected_item">Selected item:</string>
    <string name="select_extension">select extension</string>

    <string-array name="extensions">
        <item>PCM</item>
        <item>WAV</item>
        <item>MP3</item>


    </string-array>

</resources>