<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ManageRecordings">


    <Button
        android:id="@+id/homeBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="4dp"
        android:backgroundTint="@color/blue"
        android:text="@string/home"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <SearchView
        android:id="@+id/search_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:queryHint="search for recordings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.955"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

<<<<<<< Updated upstream
    <androidx.cardview.widget.CardView
        android:id="@+id/back_btn"
        android:layout_width="380dp"
        android:layout_height="400dp"
        android:layout_margin="5dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        app:cardMaxElevation="5dp"
        app:cardPreventCornerOverlap="true"
=======

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recordings_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.284"
        tools:layout_editor_absoluteX="-16dp" />

    <Button
        android:id="@+id/share_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:backgroundTint="@color/blue"
        android:text="share"
        android:textColor="@color/white"
        app:srcCompat="@android:drawable/ic_menu_share"
>>>>>>> Stashed changes
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

<<<<<<< Updated upstream
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recordings_holder"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="198dp"
            tools:listitem="@layout/item_rows" />
    </androidx.cardview.widget.CardView>

    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="53dp"
        android:layout_height="51dp"
        android:src="@drawable/back_button"
=======
    <Button
        android:id="@+id/play_recording_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:backgroundTint="@color/blue"
        android:textColor="@color/white"
        android:text="play"
        app:srcCompat = "@android:drawable/ic_media_play"
>>>>>>> Stashed changes
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.955"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.85" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
<<<<<<< Updated upstream
        android:gravity="center"
=======
        android:layout_marginStart="288dp"
        android:backgroundTint="@color/blue"
        android:textColor="@color/white"
        android:text="delete"
        app:srcCompat="@android:drawable/ic_delete"
>>>>>>> Stashed changes
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"

        tools:layout_editor_absoluteX="-16dp">

        <ImageButton
            android:id="@+id/share_btn"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue"
            android:src="@android:drawable/ic_menu_share"
            android:text="@string/share"
            android:textColor="@color/white"
            android:layout_marginEnd="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.078"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.955" />

        <ImageButton
            android:id="@+id/play_recording_btn"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue"
            android:src="@android:drawable/ic_media_play"
            android:text="@string/play"
            android:textColor="@color/white"
            android:layout_marginEnd="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.955" />

        <ImageButton
            android:id="@+id/pause_recording_btn"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:backgroundTint="@color/blue"
            android:src="@android:drawable/ic_media_pause"
            android:layout_marginEnd="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.955" />

        <ImageButton
            android:id="@+id/delete_recording_btn"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue"
            android:src="@android:drawable/ic_menu_delete"
            android:text="@string/delete"
            android:textColor="@color/white"
            android:layout_marginEnd="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.951"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.955" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>